--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,7 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+*.apk
+*.apk.*
 
 # End of https://www.toptal.com/developers/gitignore/api/godot
